<resources>

    <!-- Application commons -->
    <string name="app_name">PanoptImage</string>
    <string name="message">Welcome to PanoptImage</string>
    <string name="menu_settings">Settings</string>
    <string name="loading">Loading&#8230;</string>
    <string name="scanning">Scan in progress&#8230;</string>

    <!-- Application titles -->
    <string name="title_activity_home">PanoptImage</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="title_activity_zoom">ZoomActivity</string>
    <string name="title_activity_help">HelpActivity</string>

    <!-- Configuration activity -->
    <string name="param_title">Parameters</string>
    <string name="param_message_saved">Changes saved</string>
    <string name="param_message_notsaved">Changes discarded</string>
    <string name="param_proxy_ip">Proxy address</string>
    <string name="param_proxy_ip_hint">Ex: 192.168.0.1</string>
    <string name="param_proxy_port">Proxy port</string>
    <string name="param_proxy_port_hint">Ex: 8080</string>
    <string name="param_proxy_user">User name</string>
    <string name="param_proxy_user_hint">User name</string>
    <string name="param_proxy_pwd">Password</string>
    <string name="param_proxy_pwd_hint">Your password</string>
    <string name="param_showtip">Show Tips</string>
    <string name="param_showtuto">Show Tutorials</string>
    <string name="param_memory_optim">Memory optimization</string>
    <string name="param_memory_auto">Auto</string>
    <string name="param_memory_2">Level 2</string>
    <string name="param_memory_3">Level 3</string>
    <string name="param_memory_4">Level 4</string>
    <string name="param_memory_5">Maximum</string>

    <!-- Create activity -->
    <string name="create_title">Edit shortcuts</string>
    <string name="create_new_default">Select&#8230;</string>
    <string name="create_new_webdav">New WebDAV&#8230;</string>
    <string name="create_new_local">New Local&#8230;</string>

    <!-- Create Empty fragment -->
    <string name="create_empty_text1">Choose a shortcut in the list.</string>
    <string name="create_empty_text2">Choose New&#8230; to create a new one.</string>
    <string name="create_message_saved">%s saved</string>
    <string name="create_message_deleted">%s deleted</string>
    <string name="create_button_ok">OK</string>
    <string name="create_button_cancel">Cancel</string>

    <!-- Create Local fragment -->
    <string name="create_local_name">Name</string>
    <string name="create_local_name_hint">Shortcut name</string>
    <string name="create_local_path">Local path</string>
    <string name="create_local_path_hint">Ex: /mnt/mypath</string>
    <string name="create_local_save">Save</string>

    <!-- Create Webdav fragment -->
    <string name="create_webdav_name">Name</string>
    <string name="create_webdav_name_hint">Shortcut name</string>
    <string name="create_webdav_protocol">Protocol</string>
    <string name="create_webdav_protocol_hint">Ex: http</string>
    <string name="create_webdav_trustall">Trust all SSL Certs.</string>
    <string name="create_webdav_trustall_hint">Default: true</string>
    <string name="create_webdav_ip">Server</string>
    <string name="create_webdav_ip_hint">Ex: 192.168.0.1</string>
    <string name="create_webdav_port">Port</string>
    <string name="create_webdav_port_hint">Default: 80</string>
    <string name="create_webdav_user">User name</string>
    <string name="create_webdav_user_hint">User name</string>
    <string name="create_webdav_pwd">Password</string>
    <string name="create_webdav_pwd_hint">Your password</string>
    <string name="create_webdav_base">Repository</string>
    <string name="create_webdav_base_hint">Ex: /WebDAV/Myroot</string>
    <string name="create_webdav_path">Path</string>
    <string name="create_webdav_path_hint">Ex: /mypath</string>
    <string name="create_webdav_save">Save</string>
    <string name="create_webdav_foundsites">Found %d sites</string>

    <!-- Error messages -->
    <string name="error_header">Error: %s</string>
    <string name="error_title">Error&#8230;</string>
    <string name="error_load">Cannot load content</string>
    <string name="error_save">Cannot save content</string>
    <string name="error_load_cfg">Cannot load configuration data</string>
    <string name="error_save_cfg">Cannot save configuration data</string>
    <string name="error_unknown">Link unknown</string>
    <string name="error_unknown_param">Parameter unknown: %s</string>
    <string name="error_loading_file">Error accessing file: %s</string>
    <string name="error_filenotfound">Path not found: %s</string>
    <string name="error_nonetwork">Network not available</string>
    <string name="error_wifionly">Scan available on WiFi only</string>
    <string name="error_outofmemory">Out of memory. Change the memory settings in configuration screen</string>
    <string name="error_noserver">Server not found</string>
    <string name="error_peerunverified">Error : Untrusted certificate</string>
    <string name="error_okserver">Server reached</string>
    <string name="error_nopath">Path not found on server</string>
    <string name="error_okpath">Path found</string>

    <!-- About messages -->
    <string name="about_title">About Panoptimage</string>
    <string name="about1">Copyright &#169; 2012 arnaud.p.fereor</string>
    <string name="about2">This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.</string>
    <string name="about3">This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.</string>
    <string name="about4">To get a copy of the GNU public license, visit</string>
    <string name="about_gpl">http://www.gnu.org/licenses/</string>
    <string name="about12">To get the sources, visit</string>
    <string name="about_source">http://code.google.com/p/panoptimage/</string>

    <!-- Tooltip messages -->
    <string name="tooltip_home_create">Press here to create new links</string>
    <string name="tooltip_home_back">Close application here</string>
    <string name="tooltip_home_about">Licence information</string>
    <string name="tooltip_home_config">Press here to configure</string>
    <string name="tooltip_home_slide">Slide left or right to display shortcuts</string>
    <string name="tooltip_home_press">Press to display your images</string>
    <string name="tooltip_config_back">Close panel</string>
    <string name="tooltip_config_save">Save configuration changes</string>
    <string name="tooltip_create_back">Close panel</string>
    <string name="tooltip_create_recycle">Delete selected link</string>
    <string name="tooltip_create_save">Save shortcut</string>
    <string name="tooltip_create_scan">Scan network</string>
    <string name="tooltip_create_browse">Browse repository</string>
    <string name="tooltip_about_back">Close panel</string>
    <string name="tooltip_image_back">Close panel</string>
    <string name="tooltip_image_browse">Click here to browse directories</string>
    <string name="tooltip_image_rotate_clockwise">Rotate image clockwise</string>
    <string name="tooltip_image_rotate_counterclockwise">Rotate image counter-clockwise</string>

</resources>