<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/webdav"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp" >

    <TextView
        android:id="@+id/create_webdav_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/create_webdav_name_value"
        android:layout_gravity="right|center_vertical"
        android:layout_toLeftOf="@+id/create_webdav_name_value"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:text="@string/create_webdav_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/create_webdav_name_value"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/webdav"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_textview"
        android:hint="@string/create_webdav_name_hint" />

    <TextView
        android:id="@+id/create_webdav_protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/create_webdav_protocol_value"
        android:layout_gravity="right|center_vertical"
        android:layout_toLeftOf="@+id/create_webdav_protocol_value"
        android:paddingRight="10dp"
        android:text="@string/create_webdav_protocol"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/create_webdav_protocol_value"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/create_webdav_name_value"
        android:layout_below="@+id/create_webdav_name_value"
        android:background="@drawable/spinner_selector"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/create_webdav_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/create_webdav_ip_value"
        android:layout_gravity="right|center_vertical"
        android:layout_toLeftOf="@+id/create_webdav_ip_value"
        android:paddingRight="10dp"
        android:text="@string/create_webdav_ip"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/create_webdav_ip_value"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/create_webdav_protocol_value"
        android:layout_below="@+id/create_webdav_protocol_value"
        android:background="@drawable/ic_textview"
        android:hint="@string/create_webdav_ip_hint" />

    <TextView
        android:id="@+id/create_webdav_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/create_webdav_port_value"
        android:layout_gravity="right|center_vertical"
        android:layout_toLeftOf="@+id/create_webdav_port_value"
        android:paddingRight="10dp"
        android:text="@string/create_webdav_port"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/create_webdav_port_value"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/create_webdav_ip_value"
        android:layout_below="@+id/create_webdav_ip_value"
        android:background="@drawable/ic_textview"
        android:hint="@string/create_webdav_port_hint"
        android:inputType="number" />

    <TextView
        android:id="@+id/create_webdav_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/create_webdav_user_value"
        android:layout_gravity="right|center_vertical"
        android:layout_toLeftOf="@+id/create_webdav_user_value"
        android:paddingRight="10dp"
        android:text="@string/create_webdav_user"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/create_webdav_user_value"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/create_webdav_port_value"
        android:layout_below="@+id/create_webdav_port_value"
        android:background="@drawable/ic_textview"
        android:hint="@string/create_webdav_user_hint"
        android:inputType="number" />

    <TextView
        android:id="@+id/create_webdav_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/create_webdav_pwd_value"
        android:layout_gravity="right|center_vertical"
        android:layout_toLeftOf="@+id/create_webdav_pwd_value"
        android:paddingRight="10dp"
        android:text="@string/create_webdav_pwd"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/create_webdav_pwd_value"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/create_webdav_user_value"
        android:layout_below="@+id/create_webdav_user_value"
        android:background="@drawable/ic_textview"
        android:hint="@string/create_webdav_pwd_hint"
        android:inputType="number" />

    <TextView
        android:id="@+id/create_webdav_base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/create_webdav_base_value"
        android:layout_gravity="right|center_vertical"
        android:layout_toLeftOf="@+id/create_webdav_base_value"
        android:paddingRight="10dp"
        android:text="@string/create_webdav_base"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/create_webdav_base_value"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/create_webdav_pwd_value"
        android:layout_below="@+id/create_webdav_pwd_value"
        android:background="@drawable/ic_textview"
        android:hint="@string/create_webdav_base_hint" />

    <Button
        android:id="@+id/create_webdav_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/create_webdav_base_value"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@+id/create_webdav_base_value"
        android:background="@drawable/test"
        android:onClick="doTestServer" />

    <TextView
        android:id="@+id/tooltip_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/create_webdav_base_value"
        android:layout_toRightOf="@+id/create_webdav_test"
        android:gravity="left"
        android:text="@string/tooltip_create_test"
        android:textSize="30sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/create_webdav_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/create_webdav_path_value"
        android:layout_gravity="right|center_vertical"
        android:layout_toLeftOf="@+id/create_webdav_path_value"
        android:paddingRight="10dp"
        android:text="@string/create_webdav_path"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/create_webdav_path_value"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/create_webdav_base_value"
        android:layout_below="@+id/create_webdav_base_value"
        android:background="@drawable/ic_textview"
        android:hint="@string/create_webdav_path_hint"
        android:singleLine="true" />

    <Button
        android:id="@+id/create_webdav_browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/create_webdav_path_value"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@+id/create_webdav_path_value"
        android:background="@drawable/ellipsis"
        android:onClick="doBrowse" />

    <TextView
        android:id="@+id/tooltip_browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/create_webdav_path_value"
        android:layout_toRightOf="@+id/create_webdav_browse"
        android:gravity="left"
        android:text="@string/tooltip_create_browse"
        android:textSize="30sp"
        android:visibility="invisible" />

</RelativeLayout>