<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/back"
        android:onClick="doBack" />

    <TextView
        android:id="@+id/about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/back"
        android:layout_centerHorizontal="true"
        android:text="@string/about_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/about1"
        android:layout_width="650dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/about_title"
        android:layout_below="@+id/about_title"
        android:layout_marginLeft="-100dp"
        android:padding="@dimen/padding_medium"
        android:text="@string/about1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/about2"
        android:layout_width="650dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/about_title"
        android:layout_below="@+id/about1"
        android:layout_marginLeft="-100dp"
        android:lines="4"
        android:maxLines="4"
        android:padding="@dimen/padding_medium"
        android:text="@string/about2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:context=".AboutActivity" />

    <TextView
        android:id="@+id/about3"
        android:layout_width="650dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/about_title"
        android:layout_below="@+id/about2"
        android:layout_marginLeft="-100dp"
        android:lines="4"
        android:maxLines="4"
        android:padding="@dimen/padding_medium"
        android:text="@string/about3"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:context=".AboutActivity" />

    <TextView
        android:id="@+id/about4"
        android:layout_width="650dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/about_title"
        android:layout_below="@+id/about3"
        android:layout_marginLeft="-100dp"
        android:padding="@dimen/padding_medium"
        android:text="@string/about4"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:context=".AboutActivity" />

    <TextView
        android:id="@+id/about_gpl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/about_title"
        android:layout_below="@+id/about4"
        android:layout_marginLeft="-100dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:padding="@dimen/padding_medium"
        android:text="@string/about_gpl"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:context=".AboutActivity" />

</RelativeLayout>