<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/back"
        android:onClick="doBack" />

    <TextView
        android:id="@+id/param_proxy_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/back"
        android:layout_marginTop="24dp"
        android:layout_toLeftOf="@+id/param_center"
        android:text="@string/param_proxy_ip"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/param_proxy_ip_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/param_proxy_ip"
        android:layout_alignBottom="@+id/param_proxy_ip"
        android:layout_toRightOf="@+id/param_proxy_ip"
        android:ems="10"
        android:hint="@string/param_proxy_ip_hint" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/param_proxy_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/param_proxy_ip"
        android:layout_below="@+id/param_proxy_ip_value"
        android:layout_marginTop="30dp"
        android:text="@string/param_proxy_port"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/param_proxy_port_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/param_proxy_port"
        android:layout_alignBottom="@+id/param_proxy_port"
        android:layout_toRightOf="@id/param_proxy_port"
        android:ems="5"
        android:hint="@string/param_proxy_port_hint"
        android:inputType="number" >
    </EditText>

    <TextView
        android:id="@+id/param_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/back"
        android:layout_centerHorizontal="true"
        android:text="@string/param_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/param_showtip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/param_proxy_ip"
        android:layout_below="@+id/param_proxy_port_value"
        android:layout_marginTop="60dp"
        android:text="@string/param_showtip"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/param_showtip_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/param_showtip"
        android:layout_alignBottom="@+id/param_showtip"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@id/param_showtip" />

    <TextView
        android:id="@+id/param_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>