<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/local"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp" >

    <TextView
        android:id="@+id/create_local_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/create_local_name_value"
        android:layout_gravity="right|center_vertical"
        android:layout_toLeftOf="@+id/create_local_name_value"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:text="@string/create_local_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/create_local_name_value"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/local"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_textview"
        android:ems="10"
        android:hint="@string/create_local_name_hint" />

    <TextView
        android:id="@+id/create_local_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/create_local_path_value"
        android:layout_gravity="right|center_vertical"
        android:layout_toLeftOf="@+id/create_local_path_value"
        android:paddingRight="10dp"
        android:text="@string/create_local_path"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/create_local_path_value"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/create_local_name_value"
        android:layout_below="@+id/create_local_name_value"
        android:background="@drawable/ic_textview"
        android:ems="10"
        android:hint="@string/create_local_path_hint"
        android:singleLine="true" />

    <Button
        android:id="@+id/create_local_browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/create_local_path_value"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@+id/create_local_path_value"
        android:background="@drawable/ellipsis"
        android:onClick="doBrowse" />

    <TextView
        android:id="@+id/tooltip_browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/create_local_path_value"
        android:layout_toRightOf="@+id/create_local_browse"
        android:gravity="left"
        android:text="@string/tooltip_create_browse"
        android:textSize="30sp"
        android:visibility="invisible" />

</RelativeLayout>