<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v4.view.ViewPager
        android:id="@+id/imagepager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </android.support.v4.view.ViewPager>

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/back"
        android:onClick="doBack" />

    <Button
        android:id="@+id/image_clockwise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:background="@drawable/clockwise"
        android:onClick="doRotateClockwise" />

    <Button
        android:id="@+id/image_counterclockwise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="false"
        android:background="@drawable/counterclockwise"
        android:onClick="doRotateCounterClockwise" />

    <Button
        android:id="@+id/browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentTop="true"
        android:background="@drawable/browse"
        android:onClick="doBrowse" />

    <TextView
        android:id="@+id/tooltip_back"
        android:layout_width="@dimen/tooltip_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back"
        android:layout_toLeftOf="@+id/back"
        android:gravity="right"
        android:text="@string/tooltip_image_back"
        android:textSize="@dimen/tooltip_textsize"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tooltip_browse"
        android:layout_width="@dimen/tooltip_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/browse"
        android:layout_toRightOf="@+id/browse"
        android:gravity="left"
        android:text="@string/tooltip_image_browse"
        android:textSize="@dimen/tooltip_textsize"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tooltip_rotate_clockwise"
        android:layout_width="@dimen/tooltip_width"
        android:layout_height="wrap_content"
        android:layout_above="@+id/image_clockwise"
        android:layout_toRightOf="@+id/image_clockwise"
        android:gravity="left"
        android:text="@string/tooltip_image_rotate_clockwise"
        android:textSize="@dimen/tooltip_textsize"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tooltip_rotate_counterclockwise"
        android:layout_width="@dimen/tooltip_width"
        android:layout_height="wrap_content"
        android:layout_above="@+id/image_counterclockwise"
        android:layout_toLeftOf="@+id/image_counterclockwise"
        android:gravity="right"
        android:text="@string/tooltip_image_rotate_counterclockwise"
        android:textSize="@dimen/tooltip_textsize"
        android:visibility="invisible" />

    <fragment
        android:id="@+id/browser_fragment"
        android:name="org.fereor.panoptimage.activity.image.ImageBrowserFragment"
        android:layout_width="@dimen/image_browse"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentTop="true" />

</RelativeLayout>